# semele

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  research_log.md
experiments/: basic_run.py  check_consensus_mode.py  disturbance_sweep.py  fairness_sweep.py  fleet_size_sweep.py  frequency_sweep.py  heterogeneous_topology_sweep.py  information_sweep.py  make_paper_plots.py  mechanism_diagnostics.py  mixed_fleet_sweep.py  neighborhood_size_sweep.py  reproduce_core_result.py  run_belief_rho_multiseed.py  run_belief_rho_sweep.py  run_null_topology_test.py  run_spectral_sweep.py  spectral_diagnostics.py
experiments/legacy/: basic_run.py  disturbance_sweep.py  fairness_sweep.py  feeder_failure_sweep.py  fleet_threshold_calibration.py  meanfield_map.py  minimal_probe.py  neighborhood_size_sweep.py  rho_sweep.py  spectral_analysis.py  topology_sweep.py
notebooks/: coordination_comparison.ipynb
results/: basic_run_results.csv  core_rho_sweep.csv  core_summary.csv  core_summary.json  disturbance_sweep_results.csv  fairness_sweep_results.csv  fleet_size_thresholds.csv  fleet_threshold_calibration.csv  frequency_sweep_results.csv  information_sweep_hetero_soc_det_prices.csv  information_sweep_hetero_soc_stoch_prices.csv  information_sweep_uniform_soc_det_prices.csv  information_sweep_uniform_soc_stoch_prices.csv  neighborhood_size_sweep_results.csv  randomness_sweep_results.csv  softness_sweep_results.csv
results/legacy/: feeder_failure_results.csv  feeder_failure_summary.csv  fleet_size_results.csv  (+12 more)
src/: battery.py  controllers.py  simulator.py
(+7 files in other folders)
