[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lampyris"
version = "0.1.0"
description = "Distributed battery coordination and curtailment-risk sandbox for renewable-heavy island grids."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]